--- a/config/config.json
+++ b/config/config.json
@@ -2,16 +2,28 @@
   "shopify": {
     "shop_url": "your-shop.myshopify.com",
     "access_token": "your_access_token_here",
-    "api_version": "2024-01"
+    "api_version": "2024-01",
+    "webhook_url": "",
+    "rate_limit_strategy": "adaptive"
   },
   "scraping": {
     "max_products_per_category": 100,
     "delay_between_actions": 2,
     "headless_mode": false,
-    "download_images": true
+    "download_images": true,
+    "concurrent_requests": 3,
+    "timeout": 30
   },
   "database": {
     "type": "sqlite",
-    "path": "data/wilo_products.db"
+    "url": "sqlite:///data/wilo_products.db",
+    "pool_size": 10,
+    "max_overflow": 20
+  },
+  "log_config": {
+    "level": "INFO",
+    "file": "logs/wilo_scraper.log",
+    "max_file_size": "10MB",
+    "backup_count": 5
   }
 }
